--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/isotope-layout@3.0.6/dist/isotope.min.css" rel="stylesheet">
     
-    <title>Cookie House</title>
+    <title>Cookie's House</title>
     
 </head>
 <body>
@@ -16,8 +16,8 @@
             <img src="./image/logo.png">
         </div>
         <div class="menu">
-        <a href="#">Home</a>
-        <a href="#">About</a>
+        <a href="./index.html">Home</a>
+        <a href="./about.html">About</a>
         <a href="#">Types of Cookies</a>
         <a href="#">Shopping</a>
         <a href="#">Contact Us</a>
@@ -143,8 +143,8 @@ Join us on our delicious journey and indulge in the magic of <span>Cookie's Hous
         <div class="container"><img src="./image/9008895.png" alt=""></div>
         <div class="foot"> 
             <div class="menu1">
-                <a href="#">Home</a>
-                <a href="#">About</a>
+                <a href="./index.html">Home</a>
+                <a href="./about.html">About</a>
                 <a href="#">Types of Cookies</a>
                 <a href="#">Shopping</a>
                 <a href="#">Contact Us</a>
