--- a/about.html
+++ b/about.html
@@ -18,10 +18,17 @@
         <div class="menu">
         <a href="./index.html">Home</a>
         <a href="./about.html">About</a>
-        <a href="#">Types of Cookies</a>
-        <a href="#">Shopping</a>
-        <a href="#">Contact Us</a>
+        <a href="./types.html">Types of Cookies</a>
+        <a href="./shopping.html">Shopping</a>
+        <a href="./contact-us.html">Contact Us</a>
     </div>
+    <div class="menu-links">
+        <a href="./index.html">Home</a>
+        <a href="./about.html">About</a>
+        <a href="./types.html">Types of Cookies</a>
+        <a href="./shopping.html">Shopping</a>
+        <a href="./contact-us.html">Contact Us</a>
+      </div>
     </nav>
 <header class="about-head">
     <div>
@@ -64,15 +71,26 @@
             <div class="menu1">
                 <a href="./index.html">Home</a>
                 <a href="./about.html">About</a>
-                <a href="#">Types of Cookies</a>
-                <a href="#">Shopping</a>
-                <a href="#">Contact Us</a>
+                <a href="./types.html">Types of Cookies</a>
+                <a href="./shopping.html">Shopping</a>
+        <a href="./contact-us.html">Contact Us</a>
             </div>
+            <div class="menu-links">
+                <a href="./index.html">Home</a>
+                <a href="./about.html">About</a>
+                <a href="./types.html">Types of Cookies</a>
+                <a href="./shopping.html">Shopping</a>
+                <a href="./contact-us.html">Contact Us</a>
+              </div>
             
 
         </div>
     </div>
         <p>&copy; 2023 Cookie's House Co.</p>
     </footer>
+    <!-- <script>
+        
+        history.replaceState({}, '', '/about');
+    </script> -->
 </body>
 </html>
