--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/isotope-layout@3.0.6/dist/isotope.min.css" rel="stylesheet">
-    
+    <link rel="webpage icon" type="png" href="./image/logo.png">
     <title>Cookie's House</title>
 </head>
 <body>
