--- a/types.html
+++ b/types.html
@@ -8,7 +8,7 @@
     <link href="type.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/isotope-layout@3.0.6/dist/isotope.min.css" rel="stylesheet">
-    
+    <link rel="webpage icon" type="png" href="./image/logo.png">
 </head>
 <body>
     <nav>
