--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 
     <section class="sec3">
         <div class="formation">
-            <div><p>
+            <div class="en"><p>
                 Explore our website to discover an array of flavors and sizes suited for various occasions. From classic favorites like our signature <span>Chocolate Chip</span> to seasonal specialties that capture the essence of every time of year, there's a cookie here for everyone.
 
 Join us on our delicious journey and indulge in the magic of <span>Cookie's House</span> . Let's make every moment sweeter together!
             </p></div>
-            <div><img src="./image/deli.png"></div>
+            <div class="img"><img src="./image/deli.png"></div>
         </div>
     </section>
 
