--- a/about.html
+++ b/about.html
@@ -88,9 +88,9 @@
     </div>
         <p>&copy; 2023 Cookie's House Co.</p>
     </footer>
-    <!-- <script>
+    <script>
         
         history.replaceState({}, '', '/about');
-    </script> -->
+    </script>
 </body>
 </html>
