--- a/contact-us.html
+++ b/contact-us.html
@@ -55,10 +55,10 @@
     </div>
         <p>&copy; 2023 Cookie's House Co.</p>
     </footer>
-    <!-- <script>
+    <script>
         
         history.replaceState({}, '', '/contact-us');
-    </script> -->
+    </script>
     
 </body>
 </html>
