--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@ Join us on our delicious journey and indulge in the magic of <span>Cookie's Hous
     </div>
         <p>&copy; 2023 Cookie's House Co.</p>
     </footer>
-    <!-- <script>
+    <script>
         
         history.replaceState({}, '', 'home');
-    </script> -->
+    </script>
     <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
