--- a/shopping.html
+++ b/shopping.html
@@ -54,10 +54,10 @@
     </div>
         <p>&copy; 2023 Cookie's House Co.</p>
     </footer>
-    <!-- <script>
+    <script>
         
         history.replaceState({}, '', '/shopping');
-    </script> -->
+    </script>
     
 </body>
 </html>
