--- a/index.html
+++ b/index.html
@@ -175,6 +175,10 @@ Join us on our delicious journey and indulge in the magic of <span>Cookie's Hous
     <script>
         
         history.replaceState({}, '', 'home');
+
+        if (performance.navigation.type === 1) {
+        window.location.href = '/index.html';
+    }
     </script>
     <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
