--- a/index.html
+++ b/index.html
@@ -172,14 +172,12 @@ Join us on our delicious journey and indulge in the magic of <span>Cookie's Hous
     </div>
         <p>&copy; 2023 Cookie's House Co.</p>
     </footer>
-    <script>
+<!--     <script>
         
         history.replaceState({}, '', 'home');
 
-        if (performance.navigation.type === 1) {
-        window.location.href = '/index.html';
-    }
-    </script>
+       
+    </script> -->
     <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
