--- a/types.html
+++ b/types.html
@@ -91,10 +91,10 @@
     </div>
         <p>&copy; 2023 Cookie's House Co.</p>
     </footer>
-    <script>
+<!--     <script>
         
         history.replaceState({}, '', '/types');
-    </script>
+    </script> -->
     
 </body>
 </html>
