--- a/shopping.html
+++ b/shopping.html
@@ -334,7 +334,7 @@
                     </div>
                 </div>
                 <div class="best-p1">
-                    <img src="./image/type/11.webp" alt="img">
+                    <img src="./image/type/11.png" alt="img">
                     <div class="best-p1-txt">
                         <div class="name-of-p">
                             <p>Black and White Cookies </p>
@@ -360,7 +360,7 @@
                     </div>
                 </div>
                 <div class="best-p1">
-                    <img src="./image/type/12.webp" alt="img">
+                    <img src="./image/type/12.png" alt="img">
                     <div class="best-p1-txt">
                         <div class="name-of-p">
                             <p>Biscotti</p>
