--- a/shopping.html
+++ b/shopping.html
@@ -61,7 +61,7 @@
             <h2>Top Sales</h2>
             <div class="best-seller">
                 <div class="best-p1">
-                    <img src="./image/type/1.jpg" alt="img">
+                    <img src="./1.jpg" alt="img">
                     <div class="best-p1-txt">
                         <div class="name-of-p">
                             <p>Chocolate Chip Cookies</p>
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 <div class="best-p1">
-                    <img src="./image/type/2.jpg" alt="img">
+                    <img src="./2.jpg" alt="img">
                     <div class="best-p1-txt">
                         <div class="name-of-p">
                             <p>Shortbread Cookies</p>
@@ -116,7 +116,7 @@
                     </div>
                 </div>
                 <div class="best-p1">
-                    <img src="./image/type/3.jpg" alt="img">
+                    <img src="./3.jpg" alt="img">
                     <div class="best-p1-txt">
                         <div class="name-of-p">
                             <p>Macaron Cookies</p>
@@ -142,7 +142,7 @@
                     </div>
                 </div>
                 <div class="best-p1">
-                    <img src="./image/type/4.jpg" alt="img">
+                    <img src="./4.jpg" alt="img">
                     <div class="best-p1-txt">
                         <div class="name-of-p">
                             <p>Macaroon Cookies</p>
@@ -173,7 +173,7 @@
             <h2>New Arrivals</h2>
             <div class="best-seller">
                 <div class="best-p1">
-                    <img src="./image/type/5.jpg" alt="img">
+                    <img src="./5.jpg" alt="img">
                     <div class="best-p1-txt">
                         <div class="name-of-p">
                             <p>Biscotti Cookies</p>
@@ -199,7 +199,7 @@
                     </div>
                 </div>
                 <div class="best-p1">
-                    <img src="./image/type/6.jpg" alt="img">
+                    <img src="./6.jpg" alt="img">
                     <div class="best-p1-txt">
                         <div class="name-of-p">
                             <p>Sugar Cookies</p>
@@ -225,7 +225,7 @@
                     </div>
                 </div>
                 <div class="best-p1">
-                    <img src="./image/type/7.jpg" alt="img">
+                    <img src="./7.jpg" alt="img">
                     <div class="best-p1-txt">
                         <div class="name-of-p">
                             <p>Oatmeal Raisin Cookies</p>
@@ -251,7 +251,7 @@
                     </div>
                 </div>
                 <div class="best-p1">
-                    <img src="./image/type/8.jpg" alt="img">
+                    <img src="./8.jpg" alt="img">
                     <div class="best-p1-txt">
                         <div class="name-of-p">
                             <p>Gingerbread Cookies</p>
@@ -282,7 +282,7 @@
             <h2>Hot Sales</h2>
             <div class="best-seller">
                 <div class="best-p1">
-                    <img src="./image/type/9.jpg" alt="img">
+                    <img src="./9.jpg" alt="img">
                     <div class="best-p1-txt">
                         <div class="name-of-p">
                             <p>Snickerdoodle Cookies</p>
@@ -308,7 +308,7 @@
                     </div>
                 </div>
                 <div class="best-p1">
-                    <img src="./image/type/10.jpg" alt="img">
+                    <img src="./10.jpg" alt="img">
                     <div class="best-p1-txt">
                         <div class="name-of-p">
                             <p>Fortune Cookies</p>
@@ -334,7 +334,7 @@
                     </div>
                 </div>
                 <div class="best-p1">
-                    <img src="./image/type/11.png" alt="img">
+                    <img src="./11.png" alt="img">
                     <div class="best-p1-txt">
                         <div class="name-of-p">
                             <p>Black and White Cookies </p>
@@ -360,7 +360,7 @@
                     </div>
                 </div>
                 <div class="best-p1">
-                    <img src="./image/type/12.png" alt="img">
+                    <img src="./12.png" alt="img">
                     <div class="best-p1-txt">
                         <div class="name-of-p">
                             <p>Biscotti</p>
