--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ Join us on our delicious journey and indulge in the magic of <span>Cookie's Hous
 
         </div>
     </div>
-        <p>&copy; 2023 Cookie's House Co.</p>
+        <p>&copy; &nbsp;<a id="year-current" style="text-decoration: none;"></a> &nbsp;Cookie's House Co.</p>
     </footer>
     <!-- <script>
         
