--- a/types.html
+++ b/types.html
@@ -89,12 +89,12 @@
 
         </div>
     </div>
-        <p>&copy; 2023 Cookie's House Co.</p>
+    <p>&copy; &nbsp;<a id="year-current" style="text-decoration: none;"></a> &nbsp;Cookie's House Co.</p>
     </footer>
     <!-- <script>
         
         history.replaceState({}, '', '/types');
     </script> -->
-    
+    <script src="script.js"></script>
 </body>
 </html>
