--- a/about.html
+++ b/about.html
@@ -86,11 +86,12 @@
 
         </div>
     </div>
-        <p>&copy; 2023 Cookie's House Co.</p>
+    <p>&copy; &nbsp;<a id="year-current" style="text-decoration: none;"></a> &nbsp;Cookie's House Co.</p>
     </footer>
     <!-- <script>
         
         history.replaceState({}, '', '/about');
     </script> -->
+    <script src="script.js"></script>
 </body>
 </html>
