--- a/contact-us.html
+++ b/contact-us.html
@@ -80,7 +80,7 @@
         </div>
         
         <div class="contact-formcon">
-          <form action="https://formspree.io/f/xyyabeok" method="POST" id="contact-formcon">
+          <form action="https://formspree.io/f/xwkgkjzz" method="POST" id="contact-formcon">
             <h2>Send Message</h2>
             <div class="input-boxcon">
               <input type="text" required="true" name="FullName: ">
