--- a/about.html
+++ b/about.html
@@ -9,6 +9,16 @@
     <link href="https://cdn.jsdelivr.net/npm/isotope-layout@3.0.6/dist/isotope.min.css" rel="stylesheet">
     <link rel="webpage icon" type="png" href="./image/logo.png">
     <title>Cookie's House</title>
+    <!-- Matomo Tag Manager -->
+<script>
+  var _mtm = window._mtm = window._mtm || [];
+  _mtm.push({'mtm.startTime': (new Date().getTime()), 'event': 'mtm.Start'});
+  (function() {
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.async=true; g.src='https://cdn.matomo.cloud/ranjithdemo.matomo.cloud/container_nkwFWS1b.js'; s.parentNode.insertBefore(g,s);
+  })();
+</script>
+<!-- End Matomo Tag Manager -->
 </head>
 <body>
     <nav>
