--- a/shopping.html
+++ b/shopping.html
@@ -9,6 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/isotope-layout@3.0.6/dist/isotope.min.css" rel="stylesheet">
     <link rel="webpage icon" type="png" href="./image/logo.png">
+    <script>
+    window._mtm = window._mtm || [];
+window._mtm.push({'userid': 'dinesh'});
+</script>
     <!-- Matomo Tag Manager -->
 <script>
   var _mtm = window._mtm = window._mtm || [];
